# agent

./: .env.example  .gitignore  PRD_FEATURE_README.md  README.md  REFACTORING_SUMMARY.md  TRD_template.md  TRD_template_3.md  config_demo.py  example_usage.py  main.py  pyproject.toml  requirements.txt  run_tests.py  transcribe_gradio.py  ui_demo.py
android-compose-figma-ui/src/main/java/com/example/figmaui/ui/components/: TextFieldGroup.kt
android-compose-figma-ui/src/main/java/com/example/figmaui/ui/screens/: MainScreen.kt
config/: __init__.py  constants.py  settings.py
demos/: README.md  __init__.py  config_demo.py  services_demo.py  test_runner.py  ui_demo.py
docs/: README.md
docs/api/: README.md  configuration-api.md  services-api.md  ui-components-api.md
docs/architecture/: 01-refactoring-phase1.md  02-refactoring-phase2.md  03-refactoring-phase3.md  README.md  current-architecture.md
docs/development/: contributing.md  setup-guide.md  testing.md
docs/features/: 01-prd-generation-v1-original.md  01-prd-generation-v1.md  02-trd-generation-android.md  03-auto-recording-v1.md  features-index.md  trd-template.md
docs/features/figma-mcp/: README.md  trd-template.md  trd-user-registration.md  user-registration-summary.md
docs/features/glass_box/: GLASS_BOX_PRD.md  TRD-01_Glass_Box.md  TRD-BE-01_Backend_Implementation.md  TRD-FE-01_Frontend_Implementation.md  TRD-QA-01_Test_Plan.md
docs/proposal/: README.md  SDLC-Agent-Workflow-Proposal.md
docs/sdlc-phase/: README.md  brainstorming.md  ideation.md  prd-example.md  trd-example.md
eval/: config.yaml  run_horizon_eval.py
eval/prompts/: prd.md  summary.md  trd.md
figma-mcp/: README.md
mcp/android/: .gitignore  README.md  main.py  pyproject.toml
mcp/android/src/mobile/: __init__.py  views.py
mcp/android/src/tree/: __init__.py  config.py  utils.py  views.py
mcp/chrome/: README.md  main.py  pyproject.toml  setup.sh
mcp/chrome/src/chrome/: __init__.py  views.py
mcp/chrome/src/page/: __init__.py
mcp/confluence/: .coverage
mcp/docker/: .env.example  LICENSE  README.md  main.py  pyproject.toml  setup.sh
mcp/docker/src/: __init__.py  config.py
mcp/docker/src/docker/: __init__.py  compose.py  containers.py  images.py  networks.py
mcp/figma/: .env.example  README.md  package.json
mcp/firebase-crashlytics/: .env.example  README.md  main.py  pyproject.toml  setup.sh
mcp/firebase-crashlytics/src/: __init__.py  config.py
mcp/firebase-crashlytics/src/ai/: __init__.py  solutions.py
mcp/firebase-crashlytics/src/firebase/: __init__.py  analysis.py  crashlytics.py
mcp/gcp/: .env.example  README.md  main.py  pyproject.toml  setup.sh
mcp/gcp/src/: __init__.py  config.py
mcp/gcp/src/gcp/: __init__.py  compute.py  iam.py  projects.py  storage.py
mcp/ios/: README.md  complete_wda_setup.py  find_iphone_ip.py  main.py  pyproject.toml  quick_find_ip.sh  setup.sh  setup_real_iphone.sh  setup_real_iphone_auto.py  setup_webdriveragent.sh  setup_wifi_debugging.py  verify_setup.py
mcp/ios/src/ios/: __init__.py  views.py
mcp/ios/src/tree/: __init__.py  config.py  utils.py  views.py
mcp/mac/: .env.example  README.md  main.py  pyproject.toml  setup.sh
mcp/mac/src/: page.py
mcp/mac/src/mac/: __init__.py  views.py
mcp/slack/: README.md  main.py  pyproject.toml  setup.sh
mcp/slack/src/slack/: __init__.py
services/: __init__.py  file_service.py  openai_service.py  whisper_service.py
test_prd/: test_prd_ui.py
tests/: __init__.py  test_prd_services.py  test_prd_ui.py  test_trd_file_service.py  test_trd_integration.py  test_trd_services.py  test_trd_ui.py
ui/: __init__.py  components.py  gradio_interface.py
