[project]
name = "agent"
version = "1.0.0"
description = "Production-ready audio transcription application with AI-powered meeting analysis and PRD generation using OpenAI Whisper and GPT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "openai-whisper>=20231117",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
