[project]
name = "agent"
version = "1.0.0"
description = "The SDLC Agent Workflow is a production-ready AI platform that automates key aspects of software development, starting with audio transcription and document generation, with a comprehensive roadmap to become a complete SDLC automation solution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.0.0",
    "openai-whisper>=20231117",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
