[project]
name = "android-mcp"
version = "0.1.0"
description = "Lightweight MCP Server for Android Operating System"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/tomdwipo/agent" }
keywords = ["android", "mcp", "mobile", "automation"]
dependencies = [
    "ipykernel>=6.30.1",
    "mcp>=1.9.3",
    "pillow>=11.2.1",
    "uiautomator2>=3.3.1",
]
