[project]
name = "firebase-crashlytics-mcp"
version = "0.1.0"
description = "Model Context Protocol Server for Firebase Crashlytics Crash Analysis with AI Solutions"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/tomdwipo/agent" }
keywords = ["firebase", "crashlytics", "mcp", "crash-analysis", "ai-solutions"]
dependencies = [
    "mcp>=1.9.3",
    "google-cloud-firestore>=2.13.0",
    "firebase-admin>=6.4.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "dateparser>=1.2.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]