[project]
name = "mac-mcp"
version = "0.1.0"
description = "Lightweight MCP Server for Mac Desktop Automation and System Control"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/tomdwipo/agent" }
keywords = ["mac", "mcp", "automation", "desktop", "macos", "applescript", "system", "control"]
dependencies = [
    "mcp>=1.9.3",
    "pillow>=10.0.0",
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyobjc-framework-CoreGraphics>=10.0",
    "psutil>=5.9.0",
    "typing-extensions>=4.8.0",
    "asyncio>=3.4.3",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]