[project]
name = "slack-mcp"
version = "0.1.0"
description = "Lightweight MCP Server for Slack Workspace Automation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/tomdwipo/agent" }
keywords = ["slack", "mcp", "messaging", "automation", "collaboration", "workflow"]
dependencies = [
    "mcp>=1.9.3",
    "slack-sdk>=3.27.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]